[gd_scene load_steps=2 format=3 uid="uid://bk6k1hdqv8qie"]

[ext_resource type="Script" uid="uid://cmn0gyfcwdkk4" path="res://scenes/systems/audio/audio_manager.gd" id="1_cuhvj"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_cuhvj")

[node name="SFXPlayers" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SFXPlayers"]
bus = &"SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="SFXPlayers"]
bus = &"SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="SFXPlayers"]
bus = &"SFX"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="SFXPlayers"]
bus = &"SFX"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="SFXPlayers"]
bus = &"SFX"

[node name="MusicPlayers" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MusicPlayers"]
bus = &"Music"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="MusicPlayers"]
bus = &"Music"

[node name="UIPlayers" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="UIPlayers"]
bus = &"UI"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="UIPlayers"]
bus = &"UI"

[node name="AmbientPlayers" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AmbientPlayers"]
bus = &"Ambient"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="AmbientPlayers"]
bus = &"Ambient"
